[PL-29878]:fix method